<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".FaqsFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/faqs">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FAQs"
            android:textSize="30sp"
            android:layout_margin="10dp"
            android:textStyle="bold"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="4"
            android:columnCount="1"
            android:alignmentMode="alignMargins"
            android:layout_gravity="center_horizontal"
            android:columnOrderPreserved="false">

            <androidx.cardview.widget.CardView
                android:layout_width="370dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/indianRed"
                android:layout_margin="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question1"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/answer1"
                        android:textSize="16sp"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="370dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/indianRed"
                android:layout_margin="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question2"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/answer2"
                        android:textSize="16sp"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="370dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/indianRed"
                android:layout_margin="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question3"
                        android:textStyle="bold"
                        android:textSize="17sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/answer3"
                        android:textSize="16sp"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="370dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/indianRed"
                android:layout_margin="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question4"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/answer4"
                        android:textSize="16sp"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="370dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/indianRed"
                android:layout_margin="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question5"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/answer5"
                        android:textSize="16sp"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="370dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/indianRed"
                android:layout_margin="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question6"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/answer6"
                        android:textSize="16sp"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="370dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/indianRed"
                android:layout_margin="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question7"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/answer7"
                        android:textSize="16sp"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="370dp"
                android:layout_height="match_parent"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                android:layout_gravity="center"
                app:cardBackgroundColor="@color/indianRed"
                android:layout_margin="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/question8"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/answer8"
                        android:textSize="16sp"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </GridLayout>


    </LinearLayout>
</ScrollView>